tests/res/types/error_assign_undefined_member.say

type A {
    pub x?;
}

say obj = A();
obj.y = true; // error: Invalid index: A doesn't have member "y"